--- a/_pages/404.md
+++ b/_pages/404.md
@@ -2,8 +2,7 @@
 layout: page
 permalink: /404.html
 title: "Page not found"
-description: "Looks like there has been a mistake. Nothing exists here."
-redirect: true
+description: "아직 관련 글이 없습니다"
+redirect: false
 ---
 
-You will be redirected to the main page within 3 seconds. If not redirected, please go back to the [home page]({{ site.baseurl | prepend: site.url }}).
