--- a/_posts/2024-02-18-knapsack.md
+++ b/_posts/2024-02-18-knapsack.md
@@ -14,7 +14,7 @@ categories: 알고리즘
 
 완전탐색의 방식을 생각해보자면 우선 모든 부분집합을 살펴봐서 가장 최대값을 찾는 방법일 수 있겠다.  
 
-```cpp
+```java
 // 가능한 최대 가치를 리턴
 int knapsack(현재까지의 총무게, 선택할 아이템 인덱스){
 
@@ -32,7 +32,7 @@ int knapsack(현재까지의 총무게, 선택할 아이템 인덱스){
 
 재귀를 돌 때 같은 패러미터를 갖는 재귀가 여러번 호출되는 점을 이용한다. 같은 패러미터인 경우에 오버헤드가 상대적으로 큰 함수호출 대신에 미리 저장된 정보를 전달할 수 있다. 
 
-```cpp
+```java
 // 기존의 BruteForce와 일정
 // 최초 총무게, 아이템인덱스 크기 만큼의 dp 2차원 배열을 만든다. 
 
@@ -54,7 +54,7 @@ int knapsack(현재까지의 총무게, 선택할 아이템 인덱스){
 
 여기서는 고려하는 인덱스 번호범위, 가방의 가용무게 범위 두 요소를 바탕으로 테이블을 만든다. dp[i][W]는 가방의 가용범위 W이고 아이템을 i번째 까지만 고려했을 때의 최대 이익은 어떻게 되는가를 저장한다. 테이블을 만들때 초반 초기화 부분이 있고 이제 이로부터 시작해서 테이블을 생성해 나가는 파트가 있다. 
 
-```cpp
+```java
 // N는 아이템의 개수(최대번호), W는 가방 무게 한계. 0일때도 고려한다.
 dp[0 ~ 아이템의 최대 개수][0 ~ 가방 무게한계]
 
